set01/problem10_compile_errors.txt
Compilation started at 2/6/2024, 1:46:33 PM
Compilation finished at 2/6/2024, 1:46:34 PM
Compilation started at 2/6/2024, 1:46:40 PM
Compilation finished at 2/6/2024, 1:46:41 PM
Compilation started at 2/26/2024, 10:07:57 PM
d:\PSC-Class-Activity-sets\c-activity-sets-1\set01\problem10.c: In function 'main':
d:\PSC-Class-Activity-sets\c-activity-sets-1\set01\problem10.c:44:28: error: stray '\302' in program
     output(string1,string2, result);
                            ^
d:\PSC-Class-Activity-sets\c-activity-sets-1\set01\problem10.c:44:29: error: stray '\240' in program
     output(string1,string2, result);
                             ^
Compilation finished at 2/26/2024, 10:07:57 PM
Compilation started at 2/26/2024, 10:08:32 PM
Compilation finished at 2/26/2024, 10:08:33 PM
